[package]
name = "largest-files"
version = "0.1.0"
authors = ["wbglaeser <ben.glaeser@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
structopt = "0.3.14"
serde = { version = "1", features = ["derive"] }
csv = "1.1.3"
